cabal-version:      2.4
name:               webflex-core
version:            0.1.0.0
synopsis:           Web programming in Reflex FRP.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Adriaan Leijnse
maintainer:         parenthetical@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           FRP
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Spaceflex.Web.Class
                    , Spaceflex.Web.Base

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , reflex
                    , reflex-dom
                    , data-default
                    , containers
                    , mtl
                    , monoidal-containers
                    , reflex-extras
    hs-source-dirs:   src
    default-language: Haskell2010
