cabal-version:      2.4
name:               webflex-sim
version:            0.1.0.0
synopsis:           Simulator for Webflex.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Adriaan Leijnse
maintainer:         parenthetical@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           FRP
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Spaceflex.Web.Sim

    -- Modules included in this library but not exported.
    -- other-modules:

    default-language: Haskell2010
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , reflex
                    , reflex-dom
                    , reflex-extras
                    , webflex-core
                    , containers
                    , mtl
                    , monoidal-containers
                    , text
                    , witherable
    hs-source-dirs:   src

executable sim-test
    main-is: Main.hs
    hs-source-dirs: src-exe
    default-language: Haskell2010
    build-depends: base
                 , aeson
                 , reflex
                 , reflex-dom
                 , reflex-extras
                 , webflex-core
                 , webflex-sim
                 , containers
                 , mtl
                 , monoidal-containers
                 , text
                 , witherable
